--- a/views/dessert.ejs
+++ b/views/dessert.ejs
@@ -160,8 +160,7 @@
     async>
   </script>
 
-  <script src="./map.js"></script>
-  <script src="./script.js"></script>
+  <script src="./main.js"></script>
   <script src="https://kit.fontawesome.com/e3325bedec.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
